changed some buttons and add links to buttons

--- a/src/app/components/future/future.component.html
+++ b/src/app/components/future/future.component.html
@@ -64,7 +64,7 @@ advancements while maintaining a strong connection to the natural world.
                       <p>The best place to reach me is my <a href="mailto:jjlauesen@proton.me">email</a>. However, you can check the page linked below for more options on how to contact me.</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="/contact" class="button">More</a></li>
+													<li><a routerLink="/contact" class="button">More</a></li>
 												</ul>
 											</footer>
 										</section>
