--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -32,6 +32,6 @@
   <nav>
     <a class="link depth-0" routerLink="/projects">Projects</a>
     <a class="link depth-0" routerLink="/future">About Me</a>
-    <a class="link depth-0" routerLink="/conatc">Contact</a>
+    <a class="link depth-0" routerLink="/contact">Contact</a>
   </nav>
 </div>
