--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -49,14 +49,20 @@
                         <li>PostgresSQL</li>
                         <li>Neovim</li>
                     </ul>
+                    <ul class="actions">
+											<li><a href="https://github.com/pixelfry/feral-love" class="button">Take Me To The Repo</a></li>
+										</ul>
                     <a href="https://github.com/pixelfry/data-warehouse" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<h3>SQL Data Warehouse</h3>
-										<p>This project was designed as a portfolio piece, and showcases how to setup and run an OLAP (Online Analytical Processing) Datawarehouse. This database focuses on data analysis, aggregation, and reporting across large datasets. For this project Microsoft SQL Server was used</p>
+										<p>This project was designed as a portfolio piece, and showcases how to setup and run an OLAP (Online Analytical Processing) Data Warehouse. This database focuses on data analysis, aggregation, and reporting across large datasets. For this project Microsoft SQL Server was used</p>
                     <h5>Technologies Used</h5>
 										<ul>
 											<li>Structured Query Language</li>
 											<li>Microsoft SQL Server</li>
 											<li>Neovim</li>
+										</ul>
+                    <ul class="actions">
+											<li><a href="https://github.com/pixelfry/data-warehouse" class="button">Take Me To The Repo</a></li>
 										</ul>
 									</section>
 							</div>
