changes to project page

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -11,11 +11,11 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-                      <h3>Rated Battleground Bingo</h3>
-											<p>This is a single page application that does not connect to any database. It is entirely operated client side and is a mini-game that my friends and I will play while we are gaming online together. Made with Angular</p>
+                      <h3>Portfolio Website</h3>
+											<p>View the code that makes this page run! This portfolio website was built with Angular and the code is available to view on my github page.</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="https://github.com/pixelfry/bingo-rbg" class="button">Learn More</a></li>
+													<li><a href="https://github.com/pixelfry/portfolio_v2" class="button">Learn More</a></li>
 												</ul>
 											</footer>
 										</section>
