disabled toggle for mobile

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,7 +22,7 @@
 </header>
 
 <div id="titleBar">
-  <a class="toggle" href="navPanel"></a>
+  <a class="toggle" routerLink="/"></a>
   <span class="title">
     <a routerLink="/">Jesse Lauesen</a>
   </span>
