added second repo button

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -50,7 +50,8 @@
                         <li>Neovim</li>
                     </ul>
                     <ul class="actions">
-											<li><a href="https://github.com/pixelfry/feral-love" class="button">Take Me To The Repo</a></li>
+											<li><a href="https://github.com/pixelfry/feral-love-client" class="button">Client Repo</a></li>
+											<li><a href="https://github.com/pixelfry/feral-love-server" class="button">Server Repo</a></li>
 										</ul>
                     <a href="https://github.com/pixelfry/data-warehouse" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<h3>SQL Data Warehouse</h3>
