fixed functionality of scrolling to ids on landing page

--- a/src/app/components/future/future.component.html
+++ b/src/app/components/future/future.component.html
@@ -10,7 +10,7 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="panorama-concert.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="panorama-concert.jpg"/></a>
 										<h3>Where I have come from</h3>
                     <p>Growing up in the bustling suburbs of Chicago during the 90s, I developed a
 unique blend of creativity and tenacity that has defined my personal and
