--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -14,7 +14,7 @@
 
 <!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="techworking.jpg" alt="" /></span>
+					<span class="image fit main"><img ngSrc="techworking.jpg" fill/></span>
 					<div class="content">
 						<div class="container">
 							<div class="row gtr-uniform">
@@ -40,7 +40,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="pexels-luis-gomes-166706-546819.jpg" alt="" /></span>
+					<span class="image fit main"><img ngSrc="pexels-luis-gomes-166706-546819.jpg" fill/></span>
 					<div class="content">
 						<header>
 							<h2>Projects</h2>
@@ -56,7 +56,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="raspberrypi.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img ngSrc="raspberrypi.jpg" fill/></span>
 					<div class="content">
 						<header>
 							<h2>Moving Forward</h2>
